fix: spacing between app-bar components

--- a/src/services/tailwind.css
+++ b/src/services/tailwind.css
@@ -17,6 +17,6 @@
   }
 
   .clickable-card {
-    @apply border-t-2 border-l-2 border-r-2 rounded border-neutral-200 shadow-card focus:ring-2 focus:ring-primary-500 focus:outline-none focus:shadow-none;
+    @apply border-t-2 border-l-2 border-r-2 rounded border-neutral-200 shadow-card focus:ring-2 focus:ring-primary-500 focus:outline-none focus:border-transparent;
   }
 }
